--- a/spectra-frontend/public/css/spectra.css
+++ b/spectra-frontend/public/css/spectra.css
@@ -21562,4 +21562,22 @@ has-background-danger.is-hoverable:active {
   pointer-events: all !important;
 }
 
+:root {
+  --bulma-radius: 0;
+  cursor: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 512 512'%3e%3cg transform='rotate(45 256 256)'%3e%3crect id='r' x='16' y='216' width='480' height='80' rx='14'/%3e%3cuse href='%23r' transform='rotate(90 256 256)'/%3e%3c/g%3e%3c/svg%3e") 16 16, pointer;
+}
+
+.is-raised {
+  --button-depth: 2px;
+  --highlight: black;
+  --hover-highlight: rgba(0, 0, 0, 0.5);
+  box-shadow: var(--highlight) 0px calc(var(--button-depth) * 2) 0 0;
+  opacity: 0.9;
+}
+.is-raised:active, .is-raised.is-active {
+  opacity: 1;
+  box-shadow: var(--hover-highlight) 0px calc(var(--button-depth) / 2) 0px var(--button-depth) inset;
+  transform: translate(0, var(--button-depth));
+}
+
 /*# sourceMappingURL=spectra.css.map */
