--- a/spectra-frontend/spectra-theme.scss
+++ b/spectra-frontend/spectra-theme.scss
@@ -26,6 +26,11 @@ $beige-lighter: #eff0eb;
   --bulma-radius: 0;
   // --bulma-radius-rounded: 0;
   cursor: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 512 512'%3e%3cg transform='rotate(45 256 256)'%3e%3crect id='r' x='16' y='216' width='480' height='80' rx='14'/%3e%3cuse href='%23r' transform='rotate(90 256 256)'/%3e%3c/g%3e%3c/svg%3e") 16 16, pointer;
+} 
+
+body {
+      -webkit-tap-highlight-color: transparent;
+      }
 }
 
 
