--- a/spectra-frontend/public/css/spectra.css
+++ b/spectra-frontend/public/css/spectra.css
@@ -21567,6 +21567,10 @@ has-background-danger.is-hoverable:active {
   cursor: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 512 512'%3e%3cg transform='rotate(45 256 256)'%3e%3crect id='r' x='16' y='216' width='480' height='80' rx='14'/%3e%3cuse href='%23r' transform='rotate(90 256 256)'/%3e%3c/g%3e%3c/svg%3e") 16 16, pointer;
 }
 
+body {
+  -webkit-tap-highlight-color: transparent;
+}
+
 .is-raised {
   --button-depth: 2px;
   --highlight: black;
@@ -21578,6 +21582,34 @@ has-background-danger.is-hoverable:active {
   opacity: 1;
   box-shadow: var(--hover-highlight) 0px calc(var(--button-depth) / 2) 0px var(--button-depth) inset;
   transform: translate(0, var(--button-depth));
+}
+.is-raised.is-danger a {
+  color: var(--bulma-danger);
+}
+.is-raised.is-danger::before {
+  border-top-color: var(--bulma-danger);
+  background-color: color-mix(in srgb, var(--bulma-danger), black 25%);
+}
+.is-raised.is-success a {
+  color: var(--bulma-success);
+}
+.is-raised.is-success::before {
+  border-top-color: var(--bulma-success);
+  background-color: color-mix(in srgb, var(--bulma-success), black 25%);
+}
+.is-raised.is-warning a {
+  color: var(--bulma-warning);
+}
+.is-raised.is-warning::before {
+  border-top-color: var(--bulma-warning);
+  background-color: color-mix(in srgb, var(--bulma-warning), black 25%);
+}
+.is-raised.is-info a {
+  color: var(--bulma-info);
+}
+.is-raised.is-info::before {
+  border-top-color: var(--bulma-info);
+  background-color: color-mix(in srgb, var(--bulma-info), black 25%);
 }
 
 /*# sourceMappingURL=spectra.css.map */
