--- a/spectra-frontend/src/assets/scss/spectra-theme.scss
+++ b/spectra-frontend/src/assets/scss/spectra-theme.scss
@@ -17,23 +17,23 @@ $beige-lighter: #eff0eb;
   $input-shadow: none
 );
 
-
+@use "_custom-mixins.scss" as custom-mixins;
+@use "_color-variants.scss" as color-variants; // Use a namespace for clarity
 
 // Import the Google Font
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 
 :root {
   --bulma-radius: 0;
   // --bulma-radius-rounded: 0;
   cursor: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 512 512'%3e%3cg transform='rotate(45 256 256)'%3e%3crect id='r' x='16' y='216' width='480' height='80' rx='14'/%3e%3cuse href='%23r' transform='rotate(90 256 256)'/%3e%3c/g%3e%3c/svg%3e") 16 16, pointer;
-} 
-
-body {
-      -webkit-tap-highlight-color: transparent;
-      }
 }
 
-
+// fix for mobile device flashing on button press
+body {
+  @include custom-mixins.no-tap-highlight();
+}
 
 .is-raised {
   --button-depth: 2px;
@@ -51,4 +51,6 @@ body {
     box-shadow: var(--hover-highlight) 0px calc(var(--button-depth) / 2) 0px var(--button-depth) inset;
     transform: translate(0, var(--button-depth));
   }
+
+  @include color-variants.generate-color-variant-styles();
 }
